Devops Assignments/Terraform 3tierinfrastructure/vpc.tf
resource "aws_vpc" "tierdemo" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "tierdemovpc"
  }
}
